# faster-RCNN-trtINT8

./: CMakeLists.txt  README.txt  data_loader.h  fasterRCNN_int8.cpp
legacy_make/: Makefile  Makefile.config
